--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="js/task-1.js"></script>
-  <script src="js/task-2.js"></script>
-  <script src="js/task-3.js"></script>
+  <script src=./"js/task-1.js"></script>
+  <script src=./"js/task-2.js"></script>
+  <script src=./"js/task-3.js"></script>
 </head>
 <body></body>
+
 </html>
